--- a/app/src/main/res/layout/forecast_item.xml
+++ b/app/src/main/res/layout/forecast_item.xml
@@ -5,7 +5,7 @@
     android:layout_margin="15dp">
 
     <TextView
-        android:id="@+id/tv_date"
+        android:id="@+id/tv_date_item"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
@@ -13,7 +13,7 @@
         android:textColor="#fff" />
 
     <TextView
-        android:id="@+id/tv_info"
+        android:id="@+id/tv_info_item"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
@@ -22,7 +22,7 @@
         android:textColor="#fff" />
 
     <TextView
-        android:id="@+id/tv_max"
+        android:id="@+id/tv_max_item"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -31,7 +31,7 @@
         android:textColor="#fff" />
 
     <TextView
-        android:id="@+id/tv_min"
+        android:id="@+id/tv_min_item"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
