--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -3,20 +3,26 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+
     <TextView
         android:id="@+id/tv_title_city"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
         android:textColor="#fff"
         android:textSize="30sp" />
+
+    <Button
+        android:id="@+id/bt_change_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="更换地址"/>
 
     <TextView
         android:id="@+id/tv_update_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
         android:layout_marginRight="10dp"
         android:textColor="#fff"
         android:textSize="18sp" />
