--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -3,6 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <Button
+        android:id="@+id/bt_change_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:text="更换地址"/>
 
     <TextView
         android:id="@+id/tv_title_city"
@@ -12,11 +18,7 @@
         android:textColor="#fff"
         android:textSize="30sp" />
 
-    <Button
-        android:id="@+id/bt_change_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="更换地址"/>
+
 
     <TextView
         android:id="@+id/tv_update_time"
