--- a/app/src/main/res/layout/title.xml
+++ b/app/src/main/res/layout/title.xml
@@ -8,7 +8,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:text="更换地址"/>
+        android:layout_marginTop="5dp"
+        android:background="@mipmap/navi" />
 
     <TextView
         android:id="@+id/tv_title_city"
@@ -17,7 +18,6 @@
         android:layout_centerHorizontal="true"
         android:textColor="#fff"
         android:textSize="30sp" />
-
 
 
     <TextView
